# Programming-Taskbook-5

./: README.md
PT5Lib/PT5Lib/: PT4Align_ru.pas  PT4MPI1Proc_en.pas  PT4MPI1Proc_ru.pas  PT4MPI2Send_en.pas  PT4MPI2Send_ru.pas  PT4MPI3Coll_en.pas  PT4MPI3Coll_ru.pas  PT4MPI4Type_en.pas  PT4MPI4Type_ru.pas  PT4MPI5Comm_en.pas  PT4MPI5Comm_ru.pas  PT4MPI6File_en.pas  PT4MPI6File_ru.pas  PT4MPI7Win_en.pas  PT4MPI7Win_ru.pas  PT4MPI8Inter_en.pas  PT4MPI8Inter_ru.pas  PT4MPI8Inter_ru2.pas  PT4Match_ru.pas  PT4OOP0Begin_ru.pas  PT4OOP1Creat_ru.pas  PT4OOP2Struc_ru.pas  PT4OOP3Behav_ru.pas  PT4STL7Mix_ru.pas  PT4ZFunc_en.pas  PT4ZFunc_ru.pas  PT5Align_ru.lpi  PT5Align_ru.lpr  PT5Align_ru.lps  PT5DemoPas_ru.lpi  PT5DemoPas_ru.lpr  PT5DemoPas_ru.lps  PT5MakeCore.pas  PT5Match_ru.lpi  PT5Match_ru.lpr  PT5Match_ru.lps  PT5STL7Mix_ru.lpi  PT5STL7Mix_ru.lpr  PT5STL7Mix_ru.lps  PT5TaskMaker.pas  (+84 more)
PT5Lib/PT5LibCPP/: CMakeCache.txt  CMakeLists.txt  Makefile  PT5DemoCpp.sln  PT5DemoCpp.vcxproj  PT5MPI9Matr_en.sln  PT5MPI9Matr_en.vcxproj  PT5MPI9Matr_ru.sln  PT5MPI9Matr_ru.vcxproj  cmake_install.cmake  libpt5stl_ru.sln  libpt5stl_ru.vcxproj
PT5Lib/PT5LibCPP/inc/: pt5taskmaker.h
PT5Lib/PT5LibCPP/src/: STL1Iter.cpp  STL2Seq.cpp  STL3Alg.cpp  STL4Str.cpp  STL5Assoc.cpp  STL6Func.cpp  libpt5stl_ru.cpp
PT5Lib/PT5LibCPP/src_demo/: DemoCpp.cpp
PT5Lib/PT5LibCPP/src_mpi9/: MPI9Matr_en.cpp  pt5taskmaker.cpp
PT5Lib/PT5LibCPP/src_mpi9_ru/: MPI9Matr_ru.cpp
PT5Run/PT5RunMini/: PT4Html.pas  PT5Tasks.css  PT5Tasks.html  PTAnsiUpperCase.pas  USet1000.pas  USpecExt.pas  pt5run.lpr  pt5run.lps  (+10 more)
(+156 files in other folders)
